testfx/errors/error_tests/edge_10_break_continue.fx
// 测试: 使用 break 和 continue 关键字
L> (10) {
    if (true) {
        break
    }
    continue
}
